--- a/register.css
+++ b/register.css
@@ -112,7 +112,14 @@ input[type='radio'] {
 }
 .payment-para {
   font-weight: 900;
-  padding: 5px;
+}
+.payment-para-head {
+  text-decoration: underline;
+}
+.payment-div {
+  background-color: rgb(104, 14, 165);
+  color: white;
+  border-radius: 10px;
 }
 .submit-btn {
   background-color: rgb(104, 14, 165);
@@ -140,5 +147,11 @@ input[type='radio'] {
   }
   .form-section {
     margin: 0px auto;
+  }
+  /* .payment-para {
+    padding: 5px;
+  } */
+  .payment-div {
+    border-radius: none;
   }
 }
